--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.0.5"
+    "faker": "^4.1.0",
+    "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
+    "pug": "^3.0.0",
+    "pug-plain-loader": "^1.0.0",
+    "sass-loader": "^9.0.2"
   }
 }
